--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "npm": "3.8.x"
   },
   "dependencies": {
-    "express": "4.13.x",
-    "ejs": "2.4.x",
     "body-parser": "1.15.x",
+    "ejs": "2.4.x",
+    "express": "4.13.x",
+    "express-favicon": "^1.0.1",
     "mongoose": "4.4.x"
   }
 }
